# Rust_Programming

./: README.md
Rust Programming/First Project/: Rust installation and cargo.txt
Rust Programming/First Project/REST_API/rest_project/: Cargo.toml  Dockerfile
Rust Programming/First Project/REST_API/rest_project/src/: main.rs
Rust Programming/First Project/REST_API/rest_project/src/constants/: config.rs  mod.rs  response_messages.rs  status_enum.rs  timestamp.rs
Rust Programming/First Project/REST_API/rest_project/src/controller/: mod.rs  product_controller.rs  user_controller.rs
Rust Programming/First Project/REST_API/rest_project/src/db/: database.rs
Rust Programming/First Project/REST_API/rest_project/src/middleware/: auth_middleware.rs
Rust Programming/First Project/REST_API/rest_project/src/model/: common_fields.rs  mod.rs  product_model.rs  user_model.rs
Rust Programming/First Project/REST_API/rest_project/src/request/: login_request.rs  mod.rs  product_request.rs  user_request.rs  user_update_request.rs
Rust Programming/First Project/REST_API/rest_project/src/response/: api_response.rs
Rust Programming/First Project/REST_API/rest_project/src/service/: mod.rs  product_service.rs  user_service.rs
Rust Programming/First Project/REST_API/rest_project/src/utils/: error.rs  jwt_util.rs  mod.rs  validator.rs
Rust Programming/First Project/hello_world/: Cargo.toml
Rust Programming/First Project/hello_world/src/: borrow_and_references.rs  control_flows.rs  data_types.rs  enums.rs  error_handling.rs  functions.rs  main.rs  options.rs  ownership.rs  (+5 more)
(+9 files in other folders)
