[package]
name = "rest_project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-web-validator = "6.0.0"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures-util = "0.3.31"
log = "0.4.22"
mongodb = "3.1.0"
once_cell = "1.20.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1.11.0"
validator = { version = "0.18.1", features = ["derive"] }
